comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptate cum quod, officia sunt provident nam placeat inventore odit in voluptatem molestiae minus nihil saepe ducimus reiciendis laboriosam quasi corporis.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non corporis, natus nulla modi provident nostrum beatae consequuntur laborum ut animi, accusantium dolore aut, ratione libero. Perferendis accusamus voluptates magnam voluptatibus.</p>
         </article>
     </main>
 </body>
